Current
=======

* Clean files and tasks when disabled manual_delete
* Improve idempotence tasks for supervisor

v1.8
====

* Add notify failure by email
  Modify these variables in you host/group vars 
  to allow notification when a failure occurs
  burp_notify_failure: false
  burp_notify_failure_email_to: root@localhost
  burp_notify_failure_email_from: "burp_{{ ansible_nodename }}@domain.net"

  You will need some setup done in your sendmail command, like local postfix/sendmail. 
  It's easy for linux sysadmin or those using ansible like automation. 

v1.7
====

* Since version 2.1.10
   + Add the ability for the client to connect to different server ports
   burp_server_port_per_operation_bool: true

v1.6
====

* Update burpui-agent to 0.5.1

v1.5
====

* Update burpui-agent to 0.5.0

v1.4
====

* Added burp_remove_clients as an option to remove clients from a list

v1.3
====

* fixed idempotence, ansible-lint, centos7/systemd docker test to pass all tests with molecule.
* Passing all tests with molecule test for: centos7/systemd, Ubuntu/latest, Debian/8. 
* Added travis test with molecule
** Tests master branch of burp when run with debian/8 (ansible_burp_server-master2 name in molecule.yml)
* Molecule tests forced to be in serial: 1 to avoid performance issues with travisci
* Added automated travis import to galaxy

v1.2
====

* Add librsync option to burp-server.conf template
* Add burp_server_custom_lines var
* Added profile_lnxsrv_medium on defaults
* Added cross_all_filesystems=1 on defaults profiles
* Fixed testing centos7 with docker when running `molecule test`
* Fixed testing master branch (not test burp version in this case)

v1.0
====

* Configure Burp UI Agent
* Configure burp restore service
* Configure Burp manual delete
* Configure Burp Autoupgrade
* Activate clients from git repository
* have tests automatic for restore, backup with test client
* modify all setting for burp_server.conf