@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get install -y -o Dpkg::Options::="--force-confnew" docker-ce
 
 install:
-  - pip install docker-py
+  #- pip install docker-py # Important: docker-py is not compatible anymore, use docker instead
   # avoid bug https://github.com/ansible/ansible/issues/23016 until 2.2.3 is released
   # ref: https://github.com/metacloud/molecule/issues/783
   - pip install ansible
@@ -22,6 +22,10 @@ install:
   # - pip install required driver (e.g. docker, python-vagrant, shade)
   - pip install docker
 script:
-  - molecule test
+  - molecule create
+  - molecule converge
+  - molecule syntax
+  - molecule idempotence
+
 notifications:
     webhooks: https://galaxy.ansible.com/api/v1/notifications/
