@@ -5,6 +5,7 @@
   service:
     name: "{{ supervisor_service }}"
     state: restarted
+    sleep: 10
 
 - name: restart burp server
   supervisorctl:
