@@ -66,20 +66,30 @@ vagrant:
 docker:
   containers:
 
-      - name: ansible_burp2_server-01
+      - name: ansible_burp2_ubuntu_latest
         image: ubuntu
         image_version: latest
         ansible_groups:
           - group1
 
-      - name: ansible_burp2_server-master2
+      - name: ansible_burp2_ubuntu_trusty
+        image: ubuntu
+        image_version: trusty
+        ansible_groups:
+          - group1
+
+      - name: ansible_burp2_debian_8
         image: debian
         image_version: '8'
+
+      - name: ansible_burp2_debian_9
+        image: debian
+        image_version: '9'
         ansible_groups:
           - group_master
 
       # In docker cannot be tested with centos 7 due to https://github.com/ansible/ansible-modules-core/issues/593
-      - name: ansible_burp2_server-03
+      - name: ansible_burp2_centos_7
         image: centos/systemd
         image_version: latest
         volume_mounts:
