@@ -1,6 +1,7 @@
 ---
 - hosts: all
-  serial: 1
+  #serial: 1
+  #strategy: free # improve parallelism but pause module doesn't works with it.
   vars:
     burp_module_test_client: true
   roles:
