@@ -1,10 +1,13 @@
 ---
 # file: tasks/multi_os.yml
 
+- debug: 
+    msg: "distribution-version: {{ ansible_distribution }}-{{ ansible_distribution_major_version }}"
+
 - name: Gather OS Specific Variables
   include_vars: "{{ item }}"
   with_first_found:
-    - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+    - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
     - "../vars/{{ ansible_distribution }}.yml"
     - "../vars/{{ ansible_os_family }}.yml"
     - "../vars/defaults.yml"
